deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: testapp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: testapp
    spec:
      containers:
      - name: testapp
        image: gcr.io/$PROJECTNAME/testapp:v1
        ports:
        - containerPort: 4000
          protocol: TCP
