deployment_ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: testapp-service
  labels:
    app: testapp
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: testapp
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: testapp-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "testapp.$INGRESS_HOST.xip.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: testapp
spec:
  hosts:
  - "testapp.$INGRESS_HOST.xip.io"
  gateways:
  - testapp-gateway
  http:
  - route:
    - destination:
        port:
          number: 80
        host: testapp-service
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: testapp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: testapp
    spec:
      containers:
      - name: testapp
        image: gcr.io/ikea-cloudfoundation-test/testapp:v1
        ports:
        - containerPort: 80
          protocol: TCP
