deployment_ingress_multiple_versions.yml
apiVersion: v1
kind: Service
metadata:
  name: testapp-service
  labels:
    app: testapp
spec:
  ports:
  - port: 80
    targetPort: 4000
    name: http
  selector:
    app: testapp
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: testapp-gateway
  labels:
    app: testapp
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - testapp.$INGRESS_HOST.xip.io
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: testapp
  labels:
    app: testapp
spec:
  hosts:
  - testapp.$INGRESS_HOST.xip.io
  gateways:
  - testapp-gateway
  http:
  - route:
    - destination:
        host: testapp-service
        subset: v1
      weight: 75
    - destination:
        host: testapp-service
        subset: v2
      weight: 25
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: testapp-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: testapp
        version: v1
    spec:
      containers:
      - name: testapp
        image: gcr.io/$PROJECTNAME/testapp:v1
        ports:
        - containerPort: 4000
          protocol: TCP
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: testapp-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: testapp
        version: v2
    spec:
      containers:
      - name: testapp
        image: gcr.io/$PROJECTNAME/testapp:v2
        ports:
        - containerPort: 4000
          protocol: TCP
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: testapp-destination
  labels:
    app: testapp
spec:
  host: testapp-service # interpreted as testapp.foo.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
